fixed small gap at the bottom

--- a/src/components/ProfileCutout.css
+++ b/src/components/ProfileCutout.css
@@ -1,4 +1,5 @@
 .cutout-wrapper {
+  background-color: aliceblue;
   width: 100%;
   min-height: 120px;
   position: relative;
